welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: ';' expected but '=' found.
bool arret:Boolean = false
                   ^